kubernetes/testdata/fixture01.json
{
  "kind": "IngressList",
  "apiVersion": "networking.k8s.io/v1",
  "metadata": {
    "selfLink": "/apis/networking.k8s.io/v1/ingresses",
    "resourceVersion": "42"
  },
  "items": [
    {
      "metadata": {
        "name": "fixture01",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture01",
        "uid": "fixture01",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture01"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture02",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture02",
        "uid": "fixture02",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture02",
          "kubernetes.io/ingress.class": "skipper"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "skipper.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture03",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture03",
        "uid": "fixture03",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture03",
          "kubernetes.io/ingress.class": "other"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "other.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture04",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture04",
        "uid": "fixture04",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture04"
        }
      },
      "spec": {
        "ingressClassName": "another"
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "another.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture05",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture05",
        "uid": "fixture05",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "kubernetes.io/ingress.class": "yet-another-ignored",
          "zalando.org/aws-load-balancer-ssl-cert": "fixture05"
        }
      },
      "spec": {
        "ingressClassName": "yet-another"
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "yet-another.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture06",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture06",
        "uid": "fixture06",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "kubernetes.io/ingress.class": "skipper",
          "zalando.org/aws-load-balancer-type": "none"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "skipper.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture07",
        "namespace": "default",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/fixture07",
        "uid": "fixture07",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-type": "none"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {"hostname": "example.org"}
          ]
        }
      }
    }
  ]
}
