kubernetes/testdata/fixture01_fg.json
{
  "kind": "FabricgatewayList",
  "apiVersion": "zalando.org/v1",
  "metadata": {
    "selfLink": "/apis/zalando.org/v1/fabricgateways",
    "resourceVersion": "42"
  },
  "items": [
    {
      "metadata": {
        "name": "fixture-fg01",
        "namespace": "default",
        "selfLink": "/apis/zalando.org/v1/namespaces/default/fabricgateways/fixture-fg01",
        "uid": "fixture-fg01",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture-fg01"
        }
      },
      "status": {
        "loadBalancer": {
          "fabricgateway": [
            {"hostname": "example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture-fg02",
        "namespace": "default",
        "selfLink": "/apis/zalando.org/v1/namespaces/default/fabricgateways/fixture-fg02",
        "uid": "fixture-fg02",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture-fg02",
          "kubernetes.io/ingress.class": "skipper"
        }
      },
      "status": {
        "loadBalancer": {
          "fabricgateway": [
            {"hostname": "skipper.example.org"}
          ]
        }
      }
    },
    {
      "metadata": {
        "name": "fixture-fg03",
        "namespace": "default",
        "selfLink": "/apis/zalando.org/v1/namespaces/default/fabricgateways/fixture-fg03",
        "uid": "fixture-fg03",
        "resourceVersion": "42",
        "generation": 1,
        "creationTimestamp": "2016-11-29T14:53:42Z",
        "annotations": {
          "zalando.org/aws-load-balancer-ssl-cert": "fixture-fg03",
          "kubernetes.io/ingress.class": "other"
        }
      },
      "status": {
        "loadBalancer": {
          "fabricgateway": [
            {"hostname": "other.example.org"}
          ]
        }
      }
    }
  ]
}
