kubernetes/testdata/fixture02.json
{
  "kind": "NodeList",
  "apiVersion": "v1",
  "metadata": {
    "selfLink": "/api/v1/nodes",
    "resourceVersion": "42"
  },
  "items": [
    {
      "metadata": {
        "name": "ip-1-2-3-4.ec2.internal",
        "selfLink": "/api/v1/nodes/ip-1-2-3-4.ec2.internal",
        "uid": "fixture02",
        "resourceVersion": "42",
        "creationTimestamp": "2018-01-10T07:48:15Z",
        "labels": {
          "kubernetes.io/role": "node"
        },
        "annotations": {}
      },
      "spec": {
        "externalID": "i-0123456789abcdef0",
        "podCIDR": "100.100.100.0/24",
        "providerID": "aws:///us-east-1c/i-0123456789abcdef0"
      },
      "status": {
        "addresses": [
          {
            "address": "1.2.3.4",
            "type": "InternalIP"
          },
          {
            "address": "ip-1-2-3-4.ec2.internal",
            "type": "Hostname"
          }
        ],
        "allocatable": {
          "cpu": "4",
          "memory": "16329120Ki",
          "pods": "110"
        },
        "capacity": {
          "cpu": "4",
          "memory": "16431520Ki",
          "pods": "110"
        },
        "conditions": [],
        "daemonEndpoints": {
          "kubeletEndpoint": {
            "Port": 10250
          }
        },
        "images": []
      }
    }
  ]
}
